--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -19,10 +20,13 @@
     "@supabase/supabase-js": "^2.47.10",
     "@uiw/codemirror-theme-vscode": "^4.23.7",
     "@uiw/react-codemirror": "^4.23.7",
+    "@webcontainer/api": "^1.5.1-internal.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "i": "^0.3.7",
     "lucide-react": "^0.469.0",
+    "npm": "^11.0.0",
     "react": "18",
     "react-dom": "18",
     "react-hot-toast": "^2.4.1",
