--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "start": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "github:codemirror/lang-javascript",
     "@nanostores/react": "^0.8.4",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
